# ollama-openchat-openhermes

./: main.py  pyproject.toml
