[tool.poetry]
name = "ollama-openchat-openhermes"
version = "0.1.0"
description = "openchat"
authors = ["Yahya Unlu"]

[tool.poetry.dependencies]
python = ">=3.11.8,<3.12"
gradio = "^4.19.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"